--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -38,4 +38,10 @@
         3. 虚拟地址空间按照固定大小划分成称为页面的若干单元。在物理内存中对应的单元称为页框。页面和页框的大小通常是一样的。
         4. RAM 和磁盘之间的交换总是以整个页面为单元进行的。
         5. 缺页中断：MMU 在处理没有被映射的页面时，使 CPU 陷入到操作系统，这个陷阱常称为缺页中断。操作系统找到一个很少使用的页框且把它的内容写入磁盘。随后把需要访问的页面读到刚才回收的页框中，修改映射关系，然后重新启动引起陷阱的指令。
-        6. 页表：
+        6. 页表：虚拟地址被分成虚拟页号(高位部分)和偏移量(地位部分)两部分。虚拟页号可用作页表的索引，以找到该虚拟页面对应的页表项。由页表项可以找到页框号。然后把页框号拼接到偏移量的高端位，以替换掉虚拟页号，形成送往内存的物理地址。
+        7. 页表的目的是把虚拟页面映射为页框。
+        8. 虚拟内存本质上是用来创造一个新的抽象概念——地址空间，这个概念是对物理内存的抽象，类似于进程是对物理机器（CPU）的抽象。虚拟内存的实现，是将虚拟地址空间分解成页，并将每一页映射到物理内存的某个页框或者（暂时）解除映射。
+        9. 在任何分页式系统中，都需要考虑两个主要问题：
+            1. 虚拟地址到物理地址的映射必须非常快：由于每次访问内存，都需要进行虚拟地址到物理地址的映射。所有的指令最终来自内存，并且很多指令也会访问内存中的操作数。因此，每条指令进行多次页表访问是必要的，页表查询必须足够快，以避免映射成为一个主要瓶颈。
+            2. 如果虚拟地址空间很大，页表也会很大：现代计算机使用至少 32 位的虚拟地址，而且 64 位变得越来越普遍。假设页长为 4KB，32 位的地址空间将有 100 万页，而 64 位则更多。如果虚拟地址空间中有 100 万页，那么页表必然有 100 万条表项。
+        10. 对大而快速的页面映射的需求成为了构建计算机的重要约束。
