--- a/学习笔记/2019/0708-0714.md
+++ b/学习笔记/2019/0708-0714.md
@@ -1,19 +1,22 @@
 **[Image Processing Shortcuts using AI and ML](https://dougsillars.com/2019/06/27/image-processing-shortcuts-using-ai-and-ml-part-1/)**
 
 Machine Learning Limitations
-1. The object identification libraries can only identify items it has been trained to identify. 
-2. In order to properly identify a new object, a new model must be trained. 
+
+1. The object identification libraries can only identify items it has been trained to identify.
+2. In order to properly identify a new object, a new model must be trained.
 
 ---
 
 **[How Google Pagespeed works: Improve Your Score and Search Engine Ranking](https://calibreapp.com/blog/how-pagespeed-works/)**
 
 What is Google Lighthouse?
+
 1. Lighthouse is an open source project run by a dedicated team from Google Chrome. Over the past couple of years, it has become the go-to free performance analysis tool.
 2. Lighthouse uses Chrome’s Remote Debugging Protocol to read network request information, measure JavaScript performance, observe accessibility standards and measure user-focused timing metrics like First Contentful Paint, Time to Interactive or Speed Index.
 
 How Lighthouse calculates the Performance Score
 There are 6 metrics used to create the overall performance score. They are:
+
 1. Time to Interactive (TTI)
 2. Speed Index
 3. First Contentful Paint (FCP)
@@ -22,12 +25,32 @@ There are 6 metrics used to create the overall performance score. They are:
 6. Estimated Input Latency
 
 At a high level, there are two significant factors that hugely influence TTI:
+
 1. The amount of JavaScript delivered to the page
 2. The run time of JavaScript tasks on the main thread
 
 Effective measures for reducing the amount of script from your pages:
-- Review and remove polyfills that are no longer required for your audience.
-- Understand the cost of each third-party JavaScript library. Use webpack-bundle-analyser or source-map-explorer to visualise the how large each library is.
-- Modern JavaScript tooling (like Webpack) can break-up large JavaScript applications into a series of small bundles that are automatically loaded as a user navigates. This approach is known as code splitting and is extremely effective in improving TTI.
-- Service workers will cache the bytecode result of a parsed + compiled script. If you’re able to make use of this, visitors will pay a one-time performance cost for parse and compilation, after that it’ll be mitigated by cache.
 
+-   Review and remove polyfills that are no longer required for your audience.
+-   Understand the cost of each third-party JavaScript library. Use webpack-bundle-analyser or source-map-explorer to visualise the how large each library is.
+-   Modern JavaScript tooling (like Webpack) can break-up large JavaScript applications into a series of small bundles that are automatically loaded as a user navigates. This approach is known as code splitting and is extremely effective in improving TTI.
+-   Service workers will cache the bytecode result of a parsed + compiled script. If you’re able to make use of this, visitors will pay a one-time performance cost for parse and compilation, after that it’ll be mitigated by cache.
+
+---
+
+**[Google launches Fuchsia.dev to teach developers about Fuchsia OS [Gallery]](https://9to5google.com/2019/06/28/google-launches-fuchsia-dev/)**
+
+1. the best part of Fuchsia.dev, compared to the previous method of scouring the docs folders, is that all of the content is now searchable.
+2. More information will almost certainly be coming to Fuchsia.dev in the near future, as the Fuchsia team has already created semi-public reference info for both the Dart and Rust programming languages.
+
+---
+
+**[Babel 7.5.0 Released](https://babeljs.io/blog/2019/07/03/7.5.0)**
+
+This release includes improved support for a few ECMAScript proposals: the F# variant of the Stage 1 pipeline operator and an official plugin for the Stage 4 dynamic import() proposal (along with preset-env support). It also has support for TypeScript namespaces (experimental) and for Browserslist's default query in preset-env.
+
+1. F# pipeline operator
+2. Dynamic import
+3. `defaults` browserlist query in `@babel/preset-env`
+4. Experimental TypeScript `namespaces` support 
+5. 
