--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -45,3 +45,9 @@
             1. 虚拟地址到物理地址的映射必须非常快：由于每次访问内存，都需要进行虚拟地址到物理地址的映射。所有的指令最终来自内存，并且很多指令也会访问内存中的操作数。因此，每条指令进行多次页表访问是必要的，页表查询必须足够快，以避免映射成为一个主要瓶颈。
             2. 如果虚拟地址空间很大，页表也会很大：现代计算机使用至少 32 位的虚拟地址，而且 64 位变得越来越普遍。假设页长为 4KB，32 位的地址空间将有 100 万页，而 64 位则更多。如果虚拟地址空间中有 100 万页，那么页表必然有 100 万条表项。
         10. 对大而快速的页面映射的需求成为了构建计算机的重要约束。
+        11. 针对大内存的页表：
+            1. 多级页表
+            2. 倒排页表
+    15. 页面置换算法：当发生缺页中断时，操作系统必须在内存中选择一个页面将其换出内存，以便为即将调入的页面腾出空间。如果要换出的页面被修改过，就必须把它写回磁盘以更新该页面在磁盘上的副本，如果该页面没有被修改过，那么它在磁盘上的副本已经是最新的，不需要回写。直接用调入的页面覆盖掉被淘汰的页面就可以了。
+        1. 当发生缺页中断时，虽然可以随机地选择一个页面来置换，但是如果每次都选择不常使用的页面会提升系统的性能。如果一个被频繁使用的页面被置换出内存，很可能它在很短时间内又要被调入内存，这会带来不必要的开销。
+        2. 最优页面置换算法：在缺页中断发生时，有些页面在内存中，其中有一个页面将很快被访问，其他页面则可能要到 10、100 或 1000 条指令后才会被访问，每个页面都可以用在该页面首次被访问前所要执行的指令数作为标记。最优页面置换算法规定应该置换标记最大的页面。这个算法唯一的问题就是它是无法实现的，当缺页中断发生时，操作系统无法知道各个页面下一次将在什么时候被访问。
