--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -48,41 +48,44 @@
         11. 针对大内存的页表：
             1. 多级页表
             2. 倒排页表
-    15. 页面置换算法：当发生缺页中断时，操作系统必须在内存中选择一个页面将其换出内存，以便为即将调入的页面腾出空间。如果要换出的页面被修改过，就必须把它写回磁盘以更新该页面在磁盘上的副本，如果该页面没有被修改过，那么它在磁盘上的副本已经是最新的，不需要回写。直接用调入的页面覆盖掉被淘汰的页面就可以了。
-        1. 当发生缺页中断时，虽然可以随机地选择一个页面来置换，但是如果每次都选择不常使用的页面会提升系统的性能。如果一个被频繁使用的页面被置换出内存，很可能它在很短时间内又要被调入内存，这会带来不必要的开销。
-        2. 最优页面置换算法：在缺页中断发生时，有些页面在内存中，其中有一个页面将很快被访问，其他页面则可能要到 10、100 或 1000 条指令后才会被访问，每个页面都可以用在该页面首次被访问前所要执行的指令数作为标记。最优页面置换算法规定应该置换标记最大的页面。这个算法唯一的问题就是它是无法实现的，当缺页中断发生时，操作系统无法知道各个页面下一次将在什么时候被访问。
-        3. 最近未使用页面置换算法：
-            1. 为使操作系统能够收集有用的统计信息，在大部分具有虚拟内存的计算机中，系统为每一页面设置了两个状态位。当页面被访问时设置 R 位，当页面被写入时设置 M 位。
-            2. 当发生缺页中断时，操作系统检查所有的页面并根据它们当前的 R 位和 M 位得值，将它们分为 4 类：
-                - 没有被访问，没有被修改；
-                - 没有被访问，已被修改；
-                - 已被访问，没有被修改；
-                - 已被访问，已被修改；
-            3. NRU（最近未使用）算法随机地从编号最小的非空类中挑选一个页面淘汰。这个算法隐含的意思是，在最近一个时钟滴答中淘汰一个没有被访问的已修改页面比淘汰一个被频繁使用的“干净”页面好。NRU 主要优点是易于理解和能够有效地被实现，虽然性能不是最好的，但是已经够用了。
-        4. 先进先出页面置换算法：由操作系统维护一个所有当前在内存中的页面的链表，最新进入的页面放在表尾，最久进入的页面放在表头。当发生缺页中断时，淘汰表头的页面并把新调入的页面加入表尾。由于可能淘汰不常用的页面也可能淘汰常用的页面，很少使用纯粹的 FIFO 算法。
-        5. 第二次机会页面置换算法：
-            1. FIFO 算法可能会把经常使用的页面置换出去，为了避免这一问题，对该算法做一个简单的修改，检查最老页面的 R 位，如果 R 位是 0，那么这个页面既老又没有被使用，可以立刻置换。如果是 1，就将 R 位清 0，并把该页面放到链表的尾端，修改它的装入时间使它就像刚装入一样，然后继续搜索。
-            2. 第二次机会算法就是寻找一个最近的时钟间隔以来没有被访问过的页面。如果所有页面都被访问过了，该算法就简化为纯粹的 FIFO 算法。
-        6. 时钟页面置换算法：
-            1. 第二次机会算法是一个比较合理的算法，但它经常要在链表中移动页面，既降低了效率又不是很有必要。
-            2. 一个更好的办法是把所有的页面都保存在一个类似钟面的环形链表中，一个表指针指向最老的页面。
-            3. 当发生缺页中断时，算法首先检查表指针指向的页面，如果它的 R 位是 0 就淘汰该页面，并把新的页面插入这个位置，然后把表指针前移一个位置。如果 R 位是 1 就清除 R 位并把表针前移一个位置，重复这个过程直到找到了一个 R 位为 0 的页面为止。
-        7. 最近最少使用页面置换算法：
-            1. 在缺页中断发生时，置换未使用时间最长的页面。这个策略称为 LRU（最近最少使用）页面置换算法。
-            2. LRU 在理论上是可实现的，但是代价很高。为了完全实现 LRU，需要在内存中维护一个所有页面的链表，最近最多使用的页面在表头，最近最少使用的页面在表尾。困难的是在每次访问内存时必须要更新整个链表。在链表中找到一个页面，删除它，然后把它移动到表头是一个非常费时的操作。
-        8. 用软件模拟 LRU
-        9. 工作集页面置换算法
-        10. 工作集时钟页面置换算法
-        11. 小结：
+4. 页面置换算法：当发生缺页中断时，操作系统必须在内存中选择一个页面将其换出内存，以便为即将调入的页面腾出空间。如果要换出的页面被修改过，就必须把它写回磁盘以更新该页面在磁盘上的副本，如果该页面没有被修改过，那么它在磁盘上的副本已经是最新的，不需要回写。直接用调入的页面覆盖掉被淘汰的页面就可以了。
+    1. 当发生缺页中断时，虽然可以随机地选择一个页面来置换，但是如果每次都选择不常使用的页面会提升系统的性能。如果一个被频繁使用的页面被置换出内存，很可能它在很短时间内又要被调入内存，这会带来不必要的开销。
+    2. 最优页面置换算法：在缺页中断发生时，有些页面在内存中，其中有一个页面将很快被访问，其他页面则可能要到 10、100 或 1000 条指令后才会被访问，每个页面都可以用在该页面首次被访问前所要执行的指令数作为标记。最优页面置换算法规定应该置换标记最大的页面。这个算法唯一的问题就是它是无法实现的，当缺页中断发生时，操作系统无法知道各个页面下一次将在什么时候被访问。
+    3. 最近未使用页面置换算法：
+        1. 为使操作系统能够收集有用的统计信息，在大部分具有虚拟内存的计算机中，系统为每一页面设置了两个状态位。当页面被访问时设置 R 位，当页面被写入时设置 M 位。
+        2. 当发生缺页中断时，操作系统检查所有的页面并根据它们当前的 R 位和 M 位得值，将它们分为 4 类：
+            - 没有被访问，没有被修改；
+            - 没有被访问，已被修改；
+            - 已被访问，没有被修改；
+            - 已被访问，已被修改；
+        3. NRU（最近未使用）算法随机地从编号最小的非空类中挑选一个页面淘汰。这个算法隐含的意思是，在最近一个时钟滴答中淘汰一个没有被访问的已修改页面比淘汰一个被频繁使用的“干净”页面好。NRU 主要优点是易于理解和能够有效地被实现，虽然性能不是最好的，但是已经够用了。
+    4. 先进先出页面置换算法：由操作系统维护一个所有当前在内存中的页面的链表，最新进入的页面放在表尾，最久进入的页面放在表头。当发生缺页中断时，淘汰表头的页面并把新调入的页面加入表尾。由于可能淘汰不常用的页面也可能淘汰常用的页面，很少使用纯粹的 FIFO 算法。
+    5. 第二次机会页面置换算法：
+        1. FIFO 算法可能会把经常使用的页面置换出去，为了避免这一问题，对该算法做一个简单的修改，检查最老页面的 R 位，如果 R 位是 0，那么这个页面既老又没有被使用，可以立刻置换。如果是 1，就将 R 位清 0，并把该页面放到链表的尾端，修改它的装入时间使它就像刚装入一样，然后继续搜索。
+        2. 第二次机会算法就是寻找一个最近的时钟间隔以来没有被访问过的页面。如果所有页面都被访问过了，该算法就简化为纯粹的 FIFO 算法。
+    6. 时钟页面置换算法：
+        1. 第二次机会算法是一个比较合理的算法，但它经常要在链表中移动页面，既降低了效率又不是很有必要。
+        2. 一个更好的办法是把所有的页面都保存在一个类似钟面的环形链表中，一个表指针指向最老的页面。
+        3. 当发生缺页中断时，算法首先检查表指针指向的页面，如果它的 R 位是 0 就淘汰该页面，并把新的页面插入这个位置，然后把表指针前移一个位置。如果 R 位是 1 就清除 R 位并把表针前移一个位置，重复这个过程直到找到了一个 R 位为 0 的页面为止。
+    7. 最近最少使用页面置换算法：
+        1. 在缺页中断发生时，置换未使用时间最长的页面。这个策略称为 LRU（最近最少使用）页面置换算法。
+        2. LRU 在理论上是可实现的，但是代价很高。为了完全实现 LRU，需要在内存中维护一个所有页面的链表，最近最多使用的页面在表头，最近最少使用的页面在表尾。困难的是在每次访问内存时必须要更新整个链表。在链表中找到一个页面，删除它，然后把它移动到表头是一个非常费时的操作。
+    8. 用软件模拟 LRU
+    9. 工作集页面置换算法
+    10. 工作集时钟页面置换算法
+    11. 小结：
 
-|算法|注释|
-|:-:|:-:|
-|最有算法|不可实现，但可用作基准|
-|NRU（最近未使用）算法|LRU 的很粗糙的近似|
-|FIFO（先进先出）算法|可能抛弃重要页面|
-|第二次机会算法|比 FIFO 有很大改善|
-|LRU（最近最少使用）算法|很优秀，但很难实现|
-|NFU（最不经常使用）算法|LRU 的相对粗略的近似|
-|老化算法|非常近似 LRU 的有效算法|
-|工作集算法|实现起来开销很大|
-|工作集时钟算法|好的有效算法|
+|          算法           |          注释           |
+| :---------------------: | :---------------------: |
+|        最有算法         | 不可实现，但可用作基准  |
+|  NRU（最近未使用）算法  |   LRU 的很粗糙的近似    |
+|  FIFO（先进先出）算法   |    可能抛弃重要页面     |
+|     第二次机会算法      |   比 FIFO 有很大改善    |
+| LRU（最近最少使用）算法 |   很优秀，但很难实现    |
+| NFU（最不经常使用）算法 |  LRU 的相对粗略的近似   |
+|        老化算法         | 非常近似 LRU 的有效算法 |
+|       工作集算法        |    实现起来开销很大     |
+|     工作集时钟算法      |      好的有效算法       |
+
+5. 分页系统中的设计问题
+    1. 局部分配策略与全局分配策略
