--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -88,4 +88,18 @@
 |     工作集时钟算法      |      好的有效算法       |
 
 5. 分页系统中的设计问题
-    1. 局部分配策略与全局分配策略
+    1. 局部分配策略与全局分配策略：怎样在相互竞争的可运行进程之间分配内存
+    2. 负载控制：一旦所有进程的组合工作集超出了内存容量，就可能发生颠簸。
+    3. 页面大小：要确定最佳的页面大小需要在几个互相矛盾的因素之间进行权衡。
+    4. 分离的指令空间和数据空间：大多数计算机只有一个地址空间，既存放程序也存放数据，如果地址空间足够大那么一切都好，然而地址空间通常太小了，这就使得对地址空间的使用出现困难。
+    5. 共享页面：在大型多道程序设计系统中，几个不同用户同时运行同一个程序是很常见的，由于避免了在内存中有一个页面的两份副本，共享页面效率更高。这里存在一个问题，即不是所有的页面都适合共享。特别地，那些只读的页面可以共享，但是数据页面不能共享。
+    6. 共享库：可以使用其他的粒度取代单个页面来实现共享。
+        1. 现代操作系统中，有很多大型库被众多进程使用。
+        2. 如果共享库中的一个函数因为修正一个 bug 被更新了，那么并不需要重新编译调用了这个函数的程序。旧的二进制文件仍然可以正常工作。
+        3. 在编译共享库时，用一个特殊的编译选项告诉编译器，不要产生使用绝对地址的指令。相反，只能产生使用相对地址的指令。不论共享库被放置在虚拟地址空间的什么位置，这种指令都可以正确工作。
+        4. 只使用相对便宜量的代码被称作位置无关代码。
+    7. 内存映射文件：共享库实际上是一种更为通用的机制——内存映射文件的一个特例。
+        1. 这种机制的思想是：进程可以通过发起一个系统调用，将一个文件映射到其虚拟地址空间的一部分。在多数实现中，在映射共享的页面时不会实际读入页面的内容，而是在访问页面时才会被每次一页地读入，磁盘文件则被当作后备存储。当进程退出或显式地解除文件映射时，所有被改动的页面会被写回到文件中。
+        2. 内存映射文件提供了一种 I/O 的可选模型。可以把一个文件当作一个内存中的大字符数组来访问，而不用通过读写操作来访问这个文件。
+        3. 如果两个或两个以上的进程同时映射了同一个文件，它们就可以通过共享内存来通信。
+    8. 清除策略：
