--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -88,6 +88,7 @@
 |     工作集时钟算法      |      好的有效算法       |
 
 5. 分页系统中的设计问题
+
     1. 局部分配策略与全局分配策略：怎样在相互竞争的可运行进程之间分配内存
     2. 负载控制：一旦所有进程的组合工作集超出了内存容量，就可能发生颠簸。
     3. 页面大小：要确定最佳的页面大小需要在几个互相矛盾的因素之间进行权衡。
@@ -103,3 +104,19 @@
         2. 内存映射文件提供了一种 I/O 的可选模型。可以把一个文件当作一个内存中的大字符数组来访问，而不用通过读写操作来访问这个文件。
         3. 如果两个或两个以上的进程同时映射了同一个文件，它们就可以通过共享内存来通信。
     8. 清除策略：
+        1. 为保证有足够的空闲页框，很多分页系统有一个称为分页守护进程的后台进程，它在大多数时候睡眠，但定期被唤醒以检查内存的状态。如果空闲页框过少，分页守护进程通过预定的页面置换算法选择页面换出内存。如果这些页面装入内存后被修改过，则将它们写回磁盘。
+        2. 一种实现清除策略的方法就是用一个双指针时钟。前指针由分页守护进程控制。当它指向一个脏页面时，就该把该页面写回磁盘，前指针向前移动。当它指向一个干净页面时，仅仅指针向前移动。后指针用于页面置换，就像标准时钟算法中一样。
+    9. 虚拟内存接口
+        1. 一些高级系统，程序员可以对内存映射进行控制，并可以通过非常规的方法来增强程序的行为。
+        2. 允许程序员对内存映射进行控制的一个原因就是为了允许两个或者多个进程共享同一部分内存。
+        3. 页面共享也可以用来实现高性能的消息传递系统。
+
+6. 有关实现的问题
+    1. 与分页有关的工作：
+        1. 操作系统要在下面的四段时间里做与分页相关的工作：进程创建时，进程执行时，缺页中断时和进程终止时。
+        2. 当在分页系统中创建一个新进程时，操作系统要确定程序和数据在初始化时有多大，并为它们创建一个页表。
+        3. 操作系统还要在内存中为页表分配空间并对其进行初始化。当进程被换出时，页表不需要驻留在内存中，当进程运行时，它必须在内存中。
+        4. 操作系统要在磁盘交换区中分配空间，以便在一个进程换出时在磁盘上有放置此进程的空间。
+        5. 操作系统还要用程序正文和数据对交换区进行初始化，这样当新进程发生缺页中断时，可以调入需要的页面。
+        6. 最后，操作系统必须把有关页表和磁盘交换区的信息储存在进程表中。
+        7. 当调度一个进程执行时，必须为新进程重置 MMU，刷新 TLB，以清除以前的进程遗留的痕迹。
