--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -120,3 +120,12 @@
         5. 操作系统还要用程序正文和数据对交换区进行初始化，这样当新进程发生缺页中断时，可以调入需要的页面。
         6. 最后，操作系统必须把有关页表和磁盘交换区的信息储存在进程表中。
         7. 当调度一个进程执行时，必须为新进程重置 MMU，刷新 TLB，以清除以前的进程遗留的痕迹。
+        8. 当缺页中断发生时，操作系统必须通过读硬件寄存器来确定是哪个虚拟地址造成了缺页中断。通过该信息，它要计算需要哪个页面，并在磁盘上对该页面进行定位。它必须找到合适的页框来存放新页面，必要时还要置换老的页面，然后把所需的页面读入页框。最后还要备份程序计数器，使程序计数器指向引起缺页中断的指令，并重新执行该指令。
+        9. 当进程退出的时候，操作系统必须释放进程的页表、页面和页面在硬盘上占用的空间。如果某些页面是与其他进程共享的，当最后一个使用它们的进程终止的时候，才可以释放内存和磁盘上的页面。
+    2. 缺页中断处理：
+        1. 缺页中断发生时的事件顺序如下：
+            1. 硬件陷入内核，在堆栈中保存程序计数器。大多数机器将当前指令的各种状态信息保存在特殊的 CPU 寄存器中。
+            2. 启动一个汇编代码例程保存通用寄存器和其他易失信息，以免被操作系统破坏。这个例程将操作系统作为一个函数来调用。
+            3. 当操作系统发现一个缺页中断时，尝试发现需要哪个虚拟页面。
+            4. 一旦知道了发生缺页中断的虚拟地址，操作系统检查这个地址是否有效，并检查存取与保护是否一致。如果不一致，向进程发出一个信号或杀掉该进程。如果地址有效且没有保护错误发生。系统则检查是否有空闲页框。如果没有空闲页框，执行页面置换算法寻找一个页面来淘汰。
+            5. 
