--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -122,10 +122,16 @@
         7. 当调度一个进程执行时，必须为新进程重置 MMU，刷新 TLB，以清除以前的进程遗留的痕迹。
         8. 当缺页中断发生时，操作系统必须通过读硬件寄存器来确定是哪个虚拟地址造成了缺页中断。通过该信息，它要计算需要哪个页面，并在磁盘上对该页面进行定位。它必须找到合适的页框来存放新页面，必要时还要置换老的页面，然后把所需的页面读入页框。最后还要备份程序计数器，使程序计数器指向引起缺页中断的指令，并重新执行该指令。
         9. 当进程退出的时候，操作系统必须释放进程的页表、页面和页面在硬盘上占用的空间。如果某些页面是与其他进程共享的，当最后一个使用它们的进程终止的时候，才可以释放内存和磁盘上的页面。
-    2. 缺页中断处理：
-        1. 缺页中断发生时的事件顺序如下：
-            1. 硬件陷入内核，在堆栈中保存程序计数器。大多数机器将当前指令的各种状态信息保存在特殊的 CPU 寄存器中。
-            2. 启动一个汇编代码例程保存通用寄存器和其他易失信息，以免被操作系统破坏。这个例程将操作系统作为一个函数来调用。
-            3. 当操作系统发现一个缺页中断时，尝试发现需要哪个虚拟页面。
-            4. 一旦知道了发生缺页中断的虚拟地址，操作系统检查这个地址是否有效，并检查存取与保护是否一致。如果不一致，向进程发出一个信号或杀掉该进程。如果地址有效且没有保护错误发生。系统则检查是否有空闲页框。如果没有空闲页框，执行页面置换算法寻找一个页面来淘汰。
-            5. 
+    2. 缺页中断处理：缺页中断发生时的事件顺序如下：
+        1. 硬件陷入内核，在堆栈中保存程序计数器。大多数机器将当前指令的各种状态信息保存在特殊的 CPU 寄存器中。
+        2. 启动一个汇编代码例程保存通用寄存器和其他易失信息，以免被操作系统破坏。这个例程将操作系统作为一个函数来调用。
+        3. 当操作系统发现一个缺页中断时，尝试发现需要哪个虚拟页面。
+        4. 一旦知道了发生缺页中断的虚拟地址，操作系统检查这个地址是否有效，并检查存取与保护是否一致。如果不一致，向进程发出一个信号或杀掉该进程。如果地址有效且没有保护错误发生。系统则检查是否有空闲页框。如果没有空闲页框，执行页面置换算法寻找一个页面来淘汰。
+        5. 如果选择的页框“脏”了，安排该页写回磁盘，并发生一次上下文切换，挂起产生缺页中断的进程，让其他进程运行直至磁盘传输结束。
+        6. 一旦页框“干净”后，操作系统查找所需页面在磁盘上的地址，通过磁盘操作将其装入。该页面被装入后，产生缺页中断的进程仍然被挂起，并且如果有其他可运行的用户进程，则选择另一个用户进程运行。
+        7. 当磁盘中断发生时，表明该页已经被装入，页表已经更新可以反映它的位置，页框也被标记为正常状态。
+        8. 恢复发生缺页中断指令以前的状态，程序计数器重新指向这条指令。
+        9. 调度引发缺页中断的进程，操作系统返回调用它的汇编语言例程。
+        10. 该例程恢复寄存器和其他状态信息，返回到用户空间继续执行，就好像缺页中断没有发生过一样。
+    3. 指令备份：当程序访问不再内存中的页面时，引起缺页中断的指令会半途停止并引发操作系统的陷阱。在操作系统取出所需页面后，它需要重新启动引起陷阱的指令。在某些计算机上，CPU 的设计者们提供了一种解决办法，就是通过使用一个隐藏的内部寄存器。在每条指令执行之前，把程序计数器的内容复制到该寄存器。这些机器可能会有第二个寄存器，用来提供哪些寄存器已经自动增加或者自动减少以及增减的数量等信息。通过这些信息，操作系统可以消除引起缺页中断的指令所造成的所有影响，并使指令可以重新开始执行。如果该信息不可用，那么操作系统就要找出所发生的问题从而设计来修复它。
+    4. 锁定内存中的页面
