--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -134,4 +134,5 @@
         9. 调度引发缺页中断的进程，操作系统返回调用它的汇编语言例程。
         10. 该例程恢复寄存器和其他状态信息，返回到用户空间继续执行，就好像缺页中断没有发生过一样。
     3. 指令备份：当程序访问不再内存中的页面时，引起缺页中断的指令会半途停止并引发操作系统的陷阱。在操作系统取出所需页面后，它需要重新启动引起陷阱的指令。在某些计算机上，CPU 的设计者们提供了一种解决办法，就是通过使用一个隐藏的内部寄存器。在每条指令执行之前，把程序计数器的内容复制到该寄存器。这些机器可能会有第二个寄存器，用来提供哪些寄存器已经自动增加或者自动减少以及增减的数量等信息。通过这些信息，操作系统可以消除引起缺页中断的指令所造成的所有影响，并使指令可以重新开始执行。如果该信息不可用，那么操作系统就要找出所发生的问题从而设计来修复它。
-    4. 锁定内存中的页面
+    4. 锁定内存中的页面：如果分页算法是全局算法，包含 I/O 缓冲区的页面会有很小的机会被选中换出内存。如果一个 I/O 设备正处在对该页面进行 DMA 传输的过程之中，将这个页面移出会导致部分数据写入他们所属的缓冲区中，而部分数据被写入到最新装入的页面中。一种解决方法是锁住正在做 I/O 操作的内存中的页面以保证它不会被移出内存。锁住一个页面通常称为在内存中钉住页面。另一种方法是在内核缓冲区中完成所有的 I/O 操作，然后再将数据复制到用户页面。
+    5. 后备存储
