--- a/阅读笔记/现代操作系统/第三章：存储管理.md
+++ b/阅读笔记/现代操作系统/第三章：存储管理.md
@@ -135,4 +135,18 @@
         10. 该例程恢复寄存器和其他状态信息，返回到用户空间继续执行，就好像缺页中断没有发生过一样。
     3. 指令备份：当程序访问不再内存中的页面时，引起缺页中断的指令会半途停止并引发操作系统的陷阱。在操作系统取出所需页面后，它需要重新启动引起陷阱的指令。在某些计算机上，CPU 的设计者们提供了一种解决办法，就是通过使用一个隐藏的内部寄存器。在每条指令执行之前，把程序计数器的内容复制到该寄存器。这些机器可能会有第二个寄存器，用来提供哪些寄存器已经自动增加或者自动减少以及增减的数量等信息。通过这些信息，操作系统可以消除引起缺页中断的指令所造成的所有影响，并使指令可以重新开始执行。如果该信息不可用，那么操作系统就要找出所发生的问题从而设计来修复它。
     4. 锁定内存中的页面：如果分页算法是全局算法，包含 I/O 缓冲区的页面会有很小的机会被选中换出内存。如果一个 I/O 设备正处在对该页面进行 DMA 传输的过程之中，将这个页面移出会导致部分数据写入他们所属的缓冲区中，而部分数据被写入到最新装入的页面中。一种解决方法是锁住正在做 I/O 操作的内存中的页面以保证它不会被移出内存。锁住一个页面通常称为在内存中钉住页面。另一种方法是在内核缓冲区中完成所有的 I/O 操作，然后再将数据复制到用户页面。
-    5. 后备存储
+    5. 后备存储：
+        1. 在磁盘上分配页面空间的最简单的算法是在磁盘上设置特殊的交换分区，甚至从文件系统划分一块独立的磁盘（以平衡 I/O 负载）。
+        2. 当系统启动时，该交换分区为空，并在内存中以单独的项给出它的起始和大小。
+        3. 与每个进程对应的是其交换区的磁盘地址，即进程映像所保存的地方。
+    6. 策略和机制的分离：控制系统复杂度的一种重要方法就是把策略从机制中分离出来。通过使大多数存储管理器作为用户级进程运行，就可以把该原则应用到存储管理当中。
+7. 分段
+    1. 一个编译器在编译过程中会建立许多表，其中可能包括：
+        1. 被保存起来供打印清单用的源程序正文
+        2. 符号表，包括变量的名字和属性
+        3. 包含用到的所有整型量和浮点常量的表
+        4. 语法分析树，包含程序语法分析的结果
+        5. 编译器内部过程调用使用的堆栈
+    2. 在机器上提供多个互相独立的称为段的地址空间。每个段由一个从 0 到最大值之间的任何一个值。不同的段的长度可以不同，并且通常情况下也不同。段的长度在运行期间可以动态改变，比如，堆栈段的长度在数据被压入时会增长，在数据被弹出时又会减小。
+    3. 因为每个段都构成了一个独立的地址空间，所以它们可以独立地增长或减小而不会影响到其他段。
+    4. 段是一个逻辑实体，一个段可能包括一个过程、一个数组、一个堆栈、一组数值变量，但一般它不会同时包含多种不同类型的内容。
