--- a/阅读笔记/现代操作系统/第四章：文件系统.md
+++ b/阅读笔记/现代操作系统/第四章：文件系统.md
@@ -15,3 +15,11 @@
 4. 进程可以读取已经存在的文件，并在需要时建立新的文件。存储在文件中的信息必须是持久的，不会因为进程的创建与终止而受到影响。一个文件应只在其所有者明确删除它的情况下才会消失。
 
 5. 文件是受操作系统管理的。有关文件的构造、命名、存取、使用、保护、实现和管理方法都是操作系统设计的主要内容。
+
+6. 文件
+    1. 文件命名：文件是一种抽象机制，它提供了一种在磁盘上保留信息而且方便以后读取的方法。这种可以使用户不用了解存储信息的方法、位置和实际磁盘工作方式等有关细节。
+    2. 在进程创建时，它给文件命名。在进程终止时，该文件仍旧存在，并且其他进程可以通过这个文件名对它进行访问。
+    3. 文件结构：把文件看成字节序列为操作系统提供了最大的灵活性。用户程序可以向文件中加入任何内容，并以任何方便的形式命名。
+    4. 文件类型：UNIX 和 windows 中都有普通文件和目录，unix 还有字符特殊文件和块特殊文件。普通文件中包含有用户信息。目录是管理文件系统结构的系统文件。字符特殊文件和输入/输出有关，用于串行 I/O 类设备。
+    5. 普通文件一般分为 ASC2 文件和二进制文件。ASC2 文件的最大优势是可以显示和打印，还可以用任何文本编辑器进行编辑。二进制文件打印出来是无法理解的、充满混乱字符的一张表。
+    6. 文件存取
