--- a/学习笔记/2019/0729-0804.md
+++ b/学习笔记/2019/0729-0804.md
@@ -57,11 +57,30 @@
 
 **[Smashtest • Test 10x Faster](https://smashtest.io/)**
 
-- Smashtest is a language for rapidly describing and deploying test cases.
-- Multiple browsers and devices
-- UI and API
-- Run tests in parallel
-- Human-readable steps
-- Awesome live reports
-- Run locally or in CI/CD
+-   Smashtest is a language for rapidly describing and deploying test cases.
+-   Multiple browsers and devices
+-   UI and API
+-   Run tests in parallel
+-   Human-readable steps
+-   Awesome live reports
+-   Run locally or in CI/CD
 
+---
+
+**[Understand the JavaScript SEO basics](https://developers.google.com/search/docs/guides/javascript-seo-basics)**
+
+Googlebot processes JavaScript web apps in three main phases:
+
+1. Crawling
+2. Rendering
+3. Indexing
+
+-   Describe your page with unique titles and snippets: Unique, descriptive titles and helpful meta descriptions help users to quickly identify the best result for their goal.
+-   Write compatible code: Browsers offer many APIs and JavaScript is a quickly-evolving language. Googlebot has some limitations regarding which APIs and JavaScript features it supports. To make sure your code is compatible with Googlebot.
+-   Use meaningful HTTP status codes: Googlebot uses HTTP status codes to find out if something went wrong when crawling the page. You should use a meaningful status code to tell Googlebot if a page should not be crawled or indexed, like a 404 for a page that could not be found or a 401 code for pages behind a login. You can use HTTP status codes to tell Googlebot if a page has moved to a new URL, so that the index can be updated accordingly.
+-   Use meta robots tags carefully: You can prevent Googlebot from indexing a page or following links through the meta robots tag. For example, adding the following meta tag to the top of your page blocks Googlebot from indexing the page:
+    ```html
+    <!-- Googlebot won't index this page or follow links on this page -->
+    <meta name="robots" content="noindex, nofollow" />
+    ```
+-   Fix images and lazy-loaded content: Images can be quite costly on bandwidth and performance. A good strategy is to use lazy-loading to only load images when the user is about to see them.
