--- a/学习笔记/2019/0729-0804.md
+++ b/学习笔记/2019/0729-0804.md
@@ -84,3 +84,56 @@ Googlebot processes JavaScript web apps in three main phases:
     <meta name="robots" content="noindex, nofollow" />
     ```
 -   Fix images and lazy-loaded content: Images can be quite costly on bandwidth and performance. A good strategy is to use lazy-loading to only load images when the user is about to see them.
+
+---
+
+**[Node.js 12: The future of server-side JavaScript](https://blog.logrocket.com/node-js-12/)**
+
+**V8 JavaScript engine upgrades**
+- Zero-cost async stack traces – this will serve to enrich the error.stack property with asynchronous call frames without adding extra runtime to the V8 engine
+- Faster calls with arguments mismatch – in the past, V8 had to handle all function calls with too many or too few parameters the same way, which came at a performance cost. Now, it’s smart enough to know when it can skip this step, reducing call overhead up to 60%
+- Faster async functions and promises – yes indeed, using async is actually two extra microticks faster than promises now, if you needed a reason besides the more synchronous-style syntax async / await provides to developers unfamiliar with promises
+- Faster JavaScript parsing – at startup of a web page, just under 10% of the V8 time is spent parsing JS. The latest JavaScript parser released has improved parsing speed by up to 30% on desktops
+
+**More secure security with TLS 1.3**
+
+TLS, which stands for transport layer security, is how Node handles encrypted stream communication.
+
+By using TLS 1.3, Node apps will have increased end-user privacy while also improving the performance of requests by reducing the time required for the HTTPS handshake.
+
+**Properly configured default heap limits**
+
+Up to this point, the JavaScript heap size defaulted to the max heap sizes set by V8 for use with browsers, unless manually configured otherwise. With the release of Node.js 12, the JS heap size will be configured based on available memory, which ensures Node doesn’t try to use more memory than is available and terminate processes when its memory is exhausted.
+
+**The default http parser becomes llhttp**
+
+llhttp is faster than http_parser by 156%, it’s written in fewer lines of code, and all performance optimizations are generated automatically, as opposed to http_parser’s hand-optimized code.
+
+**Diagnostic reports on demand**
+
+This kind of real-time reporting can help diagnose problems in production including crashes, slow performance, memory leaks, high CPU usage, unexpected errors, etc. – the kind of stuff that usually takes hours if not days to debug, diagnose and fix.
+
+**Integrated heap dumps**
+
+Now there’s no need to install new modules to investigate memory issues – just tell Node what kind of JSON-formatted diagnostic summary you want via the command line or an API call and parse through all of the info you can handle.
+
+**Native modules get easier in Node.js**
+
+Making and building native modules for Node continues to improve, with changes that include better support for native modules in combination with worker threads, as well as the version 4 release of the N-API, which makes it easier to configure your own threads for native asynchronous functions.
+
+**Worker threads are coming – the experimental flag has been removed**
+
+Worker threads, while they’ve been around since Node 10, no longer require a flag to be enabled – they’re well on their way to moving out of the experimental phase. 
+
+**Startup time improvements**
+
+Node 12 has built upon this idea to generate the code cache for built-in libraries in advance at build time, allowing the main thread to use the code cache to start up the initial load of any built-in library written in JavaScript.
+
+**ES6 module support, it’s almost here**
+
+This feature is still experimental, and the Node team is looking for feedback from people trying it out, but just imagine being able to transition seamlessly from front-end to back-end JavaScript with nary a care in the world.
+
+**New compiler & platform minimum standards for Node 12**
+
+The codebase now needs a minimum of GCC 6 and glibc 2.17 on platforms other than macOS and Windows. Binaries released use this new toolchain minimum and include new compile-time performance and security enhancements.
+
