--- a/阅读笔记/现代操作系统/第四章：文件系统.md
+++ b/阅读笔记/现代操作系统/第四章：文件系统.md
@@ -17,9 +17,74 @@
 5. 文件是受操作系统管理的。有关文件的构造、命名、存取、使用、保护、实现和管理方法都是操作系统设计的主要内容。
 
 6. 文件
+
     1. 文件命名：文件是一种抽象机制，它提供了一种在磁盘上保留信息而且方便以后读取的方法。这种可以使用户不用了解存储信息的方法、位置和实际磁盘工作方式等有关细节。
     2. 在进程创建时，它给文件命名。在进程终止时，该文件仍旧存在，并且其他进程可以通过这个文件名对它进行访问。
     3. 文件结构：把文件看成字节序列为操作系统提供了最大的灵活性。用户程序可以向文件中加入任何内容，并以任何方便的形式命名。
     4. 文件类型：UNIX 和 windows 中都有普通文件和目录，unix 还有字符特殊文件和块特殊文件。普通文件中包含有用户信息。目录是管理文件系统结构的系统文件。字符特殊文件和输入/输出有关，用于串行 I/O 类设备。
     5. 普通文件一般分为 ASC2 文件和二进制文件。ASC2 文件的最大优势是可以显示和打印，还可以用任何文本编辑器进行编辑。二进制文件打印出来是无法理解的、充满混乱字符的一张表。
     6. 文件存取
+        - 早期操作系统只有一种文件存取方式：顺序存取。进程在这些系统中可从头顺序读取文件的全部字节或记录，但不能跳过某一些内容，也不能不按顺序读取。顺序存取文件是可以返回到起点的，需要时可多次读取该文件。在存储介质是磁带而不是磁盘时，顺序存取文件是很方便的。
+        - 当用磁盘来存储文件时，我们可以不按顺序地读取文件中的字节或记录，或者按照关键字而不是位置来存取记录。这种能够以任何次序读取其中字节或记录的文件称作随机存取文件。
+    7. 文件属性
+        1. 文件都有文件名和数据。所有的操作系统还会保存其他与文件相关的信息，如文件创建的日期和时间、文件大小等。这些附加信息称为文件属性或元数据。
+        2. 常见的文件属性：保护、口令、创建者、所有者、只读标志、隐藏标志、系统标志、存档标志、二进制标志、随机存取标志、临时标志、加锁标志、记录长度、键的位置、键的长度、创建时间、最后一次存取时间、最后一次修改时间、当前大小、最长长度。
+        3. 标志使一些位或者短的字段，用于控制或启用某些特殊属性。
+    8. 文件操作：一些常用的系统调用
+        1. create：该调用的目的是表示文件即将建立，并设置文件的一些属性。
+        2. delete：删除文件
+        3. open：把文件属性和磁盘地址表装入内存，以便后续调用的快速存取。
+        4. close：存取结束后，不再需要文件属性和磁盘地址，关闭。
+        5. read：在文件中读取数据
+        6. write：向文件写数据
+        7. append：此调用是 write 的限制形式，它只能在文件末尾添加数据
+        8. seek：指定从何处开始取数据
+        9. get attributes：进程运行时读取文件属性。
+        10. set attributes：设置文件的属性
+        11. rename：修改文件名
+
+7. 目录：文件系统通常提供目录或文件夹用于记录文件，在很多系统中目录本身也是文件。
+
+    1. 一级目录系统：目录系统的最简单形式是在一个目录中包含所有的文件。称为根目录。
+    2. 层次目录系统：即目录树
+    3. 路径名：用目录树组织文件系统时，需要有某种方法指明文件名。常用方法有两种：
+        1. 每个文件都赋予一个绝对路径名，它由根目录到文件的路径组成。
+        2. 另一种指定文件名的方法是使用相对路径名。它常和工作目录一起使用。
+    4. 目录操作：不同系统中管理目录的系统调用的差别比管理文件的系统调用差别大
+        1. create：创建目录，有时通过 mkdir 程序完成
+        2. delete：删除目录
+        3. opendir：目录内容可被读取
+        4. closedir：读取目录结束后，关闭
+        5. readdir：返回打开目录的下一个目录项
+        6. rename：改名
+        7. link：硬链接
+        8. unlink：解除连接
+
+8. 文件系统的实现：
+    1. 文件系统布局：文件系统放在磁盘上，多数磁盘划分为一个或多个分区，每个分区中有一个独立的文件系统。
+        1. 引导块：引导操作系统启动
+        2. 超级块：包含文件系统的所有关键参数
+        3. 空闲空间管理
+        4. i 节点
+        5. 根目录
+        6. 文件和目录
+    2. 文件的实现
+        1. 连续分配：把文件作为一连串连续数据块存储在磁盘上。
+            - 两大优势：
+                - 实现简单，记录每个文件用到的磁盘块简化为只需记住 2 个数字即可，第一块的磁盘地址和文件的块数。
+                - 读操作性能较好，因为在单个操作中就可以从磁盘上读出整个文件
+            - 缺点：随着时间推移，磁盘会变得零碎。
+        2. 链表分配：每个块的第一个字作为指向下一块的指针，块的其他部分存放数据。
+            - 优点：可以充分利用每个磁盘块，不会因为磁盘碎片而浪费存储空间。
+            - 缺点：在链表分配方案中，尽管顺序读取文件非常方便，但是随机存取却相当缓慢。由于指针占去了一些字节，每个磁盘块存储数据的字节不再是 2 的整数次幂，会降低系统的运行效率，因为很多程序都是以长度为 2 的整数次幂来读写磁盘块的。由于每个块的前几个字节被指向了下一个块的指针所占据，所以要读出完整的一个块，就需要从两个磁盘块中获得和拼接信息，这就因复制引发了额外的开销。
+        3. 在内存中采用表的链表分配：如果取出每个磁盘块的指针，把它放在内存的一个表中，就可以解决上述链表的两个不足。文件分配表。
+            - 优点：
+                - 整个块都可以存放数据
+                - 随机存取容易得多。虽然仍要顺着链在文件中查找给定的偏移量，但是整个链表都存放在内存中，所以不需要任何磁盘引用。
+            - 缺点：必须把整个表都存放在内存中。
+        4. i 节点：给每个文件赋予一个 i 节点的数据结构，其中列出了文件属性和文件块的磁盘地址。
+            - 优点：
+                - 只有在对应文件打开时，其 i 节点才在内存中。
+                - 占据空间小
+            - 缺点：如果每个 i 节点只能存储固定数量的磁盘地址，那么当一个文件所含的磁盘块的数目超出了 i 节点所能容纳的数目怎么办？一个解决方案是最后一个“磁盘地址”不指向数据块，而是指向一个包含磁盘块地址的块的地址。更高级的解决方案是：可以有两个或更多个包含磁盘地址的块，或者指向存放其他存放地址的磁盘块的磁盘块。
+    3. 目录的实现
