--- a/学习笔记/2019/0729-0804.md
+++ b/学习笔记/2019/0729-0804.md
@@ -137,3 +137,23 @@ This feature is still experimental, and the Node team is looking for feedback fr
 
 The codebase now needs a minimum of GCC 6 and glibc 2.17 on platforms other than macOS and Windows. Binaries released use this new toolchain minimum and include new compile-time performance and security enhancements.
 
+---
+
+**[Getting Started Optimizing a React Native App](https://blog.usejournal.com/getting-started-optimizing-a-react-native-app-1d7507c2d849)**
+
+- Find Your Monsters
+    - Try removing all animations — how does your app run?
+    - Try rendering components with data not being fetched — is it still slow?
+    - Try removing a component all together — is the rendering time significantly improving?
+
+- Measure, Measure and Measure Again
+- Visualize your bundle: react-native-bundle-visualizer is a great tool for investigating your bundle size. 
+- Load Only What You Need When You Need It
+    - Dynamically import areas or dependencies as you need them
+    - Delay anything that isn’t crucial for the user
+
+- Optimize and standardize assets
+- Embrace perceived performance: Performance isn’t only execution time, it’s the feeling of a fast app experience you want in the end.
+- Utilize as much open source as possible and keep them up to date
+- Rewrite Your Animations: Animations can also be a huge performance hog on the JS-thread, rewriting these to use the native thread instead can make a huge difference. Almost every animation is possible using the limited subset of Animated with useNativeDriver:true set — its all about being clever with the implementation.
+- Avoid Micro Optimizations Until Later: Focus on the bigger picture before rewriting things unnecessary inline functions etc.
