--- a/阅读笔记/现代操作系统/第四章：文件系统.md
+++ b/阅读笔记/现代操作系统/第四章：文件系统.md
@@ -61,6 +61,7 @@
         8. unlink：解除连接
 
 8. 文件系统的实现：
+
     1. 文件系统布局：文件系统放在磁盘上，多数磁盘划分为一个或多个分区，每个分区中有一个独立的文件系统。
         1. 引导块：引导操作系统启动
         2. 超级块：包含文件系统的所有关键参数
@@ -88,3 +89,12 @@
                 - 占据空间小
             - 缺点：如果每个 i 节点只能存储固定数量的磁盘地址，那么当一个文件所含的磁盘块的数目超出了 i 节点所能容纳的数目怎么办？一个解决方案是最后一个“磁盘地址”不指向数据块，而是指向一个包含磁盘块地址的块的地址。更高级的解决方案是：可以有两个或更多个包含磁盘地址的块，或者指向存放其他存放地址的磁盘块的磁盘块。
     3. 目录的实现
+        1. 目录中有一个固定大小的目录项列表，每个文件对应一项，其中包含一个文件名、一个文件属性结构以及用以说明磁盘块位置的一个或多个磁盘地址。
+        2. 采用 i 节点的系统，还存在另一种方法，即把文件属性存放在 i 节点中而不是目录项中。在这种情形下，目录项会更短：只有文件名和 i 节点号。与把属性存放到目录项相比，这种方法更好。
+    4. 共享文件
+    5. 日志结构文件系统
+    6. 日志文件系统
+    7. 虚拟文件系统
+
+9. 文件系统管理和优化
+    1. 磁盘空间管理
