--- a/阅读笔记/现代操作系统/第四章：文件系统.md
+++ b/阅读笔记/现代操作系统/第四章：文件系统.md
@@ -97,4 +97,17 @@
     7. 虚拟文件系统
 
 9. 文件系统管理和优化
-    1. 磁盘空间管理
+    1. 磁盘空间管理：存储 n 个字节的文件可以有两种策略
+        1. 分配 n 个字节的连续磁盘空间，存在一个问题，当文件扩大时，有可能需要在磁盘上移动文件
+        2. 把文件分成很多个连续的块，几乎所有的文件系统都把文件分割成固定大小的块来存储，各块之间不一定相邻
+        3. 块大小：把文件按固定大小的块来存储，会出现一个问题，块的大小应该是多少？通过实验曲线得出的结论，最佳为 4KB
+        4. 记录空闲块：一种方法是采用磁盘块链表，每个块中包含尽可能多的空闲磁盘块号。另一种空闲磁盘空间管理的方法是采用位图
+        5. 磁盘配额：多用户操作系统常常提供一种强制性磁盘配额机制。其思想是系统管理员分给每个用户拥有文件和块的最大数量，操作系统确保每个用户不超过分给他们的配额。
+    2. 文件系统备份
+    3. 文件系统的一致性：许多文件系统读取磁盘块，进行修改后，再写回磁盘。如果在修改过的磁盘块全部写回之前系统崩溃，则文件系统有可能处于不一致的状态。
+       1. 很多计算机都带有一个实用程序以检验文件系统的一致性。例如，Unix有fsck，Windows有scandisk。
+       2. 一致性检查分为两种：块的一致性检查和文件的一致性检查
+    4. 文件系统性能
+       1. 高速缓存：最常用的减少磁盘访问次数技术是高速缓存或者缓冲区高速缓存。管理高速缓存有不同的算法，常用的算法是：检查全部的读请求，查看在高速缓存中是否有所需要的块。如果存在，可执行读操作而无需访问磁盘。如果该块不在高速缓存中，首先要把它读到高速缓存，再复制到所需地方。之后，对同一个请求都通过高速缓存完成。
+       2. 块提前读：在需要用到块之前，试图提前将其读入高速缓存，从而提高命中率。块提前读策略只适用于顺序读取的文件。对随机读取文件不起作用。
+       3. 减少磁盘臂运动：把有可能顺序读取的块放在一起，最好是在统一个柱面上，从而减少磁盘臂的移动次数。
