--- a/阅读笔记/现代操作系统/第五章：输入输出.md
+++ b/阅读笔记/现代操作系统/第五章：输入输出.md
@@ -8,3 +8,24 @@
         2. 块可寻址的设备和其他设备之间并没有严格的界限。磁盘是公认的块可寻址的设备，因为无论磁盘臂当前处于什么位置，它总是能够寻址其他柱面并且等待所需要的磁盘块旋转到磁头下面。
         3. 字符设备以字符为单位发送或接收一个字符流，而不考虑任何块结构。字符设备是不可寻址的，也没有任何寻道操作。打印机、网络接口、鼠标，以及大多数与磁盘不同的设备都可看作是字符设备。
     2. 设备控制器
+        1. I/O 设备一般由机械部件和电子部件两部分组成。通常可以将这两部分分开处理，以提供更加模块化和更加通用的设计。
+        2. 电子部件称作设备控制器或适配器。在个人计算机上，它经常以主板上的芯片的形式出现，或者以插入扩展槽中的印刷电路板的形式出现。
+        3. 机械部件是设备本身。
+        4. 控制器卡上通常有一个连接器，通向设备本身的电缆可以插入到这个连接器中。
+        5. 控制器与设备之间的接口通常是一个很低层次的接口。
+        6. 控制器的任务是把串行的位流转换为字节块，并进行必要的错误校正工作。字节块通常首先在控制器内部的一个缓冲区中按位进行组装，然后在对校验和进行校验并证明字节块没有错误后，再将它复制到主存中。
+        7. 在同样低的层次上，监视器的控制器也是一个位串行设备。它从内存中读入包含待显示字符的字节，并产生用来调制 CRT 电子束的信号，以便将结果写到屏幕上。
+    3. 内存映射 I/O
+        1. 每个控制器有几个寄存器用来与 CPU 进行通信。通过写入这些寄存器，操作系统可以命令设备发送数据、接收数据、开启或关闭，或者执行某些其他操作。通过读取这些寄存器，操作系统可以了解设备的状态，是否准备好接收一个新的命令等。
+        2. 许多设备还有一个操作系统可以读写的数据缓冲区。
+        3. CPU 如何与设备的控制寄存器和数据缓冲区进行通信？
+            1. 方法 1: 每个控制寄存器被分配一个 I/O 端口号，这是一个 8 位或 16 位的整数。所有 I/O 端口形成 I/Oduankou 空间，并且受到保护使得普通的用户程序不能对其进行访问，只有操作系统可以访问。CPU 可以读写控制寄存器中的内容。在这一方案中，内存地址空间和 I/O 地址空间是不同的。
+            2. 方法 2: 将所有控制寄存器映射到内存空间中。每个控制寄存器被分配惟一的一个内存地址，并且不会有内存被分配这一地址。这样的系统称为内存映射 I/O。
+            3. 对于内存映射 I/O，不需要特殊的保护机制来阻止用户进程执行 I/O 操作。操作系统必须要做的全部事情只是避免把包含控制寄存器的那部分地址空间放入任何用户的虚拟地址空间之中。可以使不同的设备驱动程序放置在不同的地址空间中，不但可以减小内核的大小，而且可以放置驱动程序之间互相干扰。
+            4. 对于内存映射 I/O，可以引用内存的每一条指令也可以引用控制寄存器。
+    4. 直接存储器存取：无论一个 CPU 是否具有内存映射 I/O，它都需要寻址设备控制器以便与它们交换数据。CPU 可以从 I/O 控制器每次请求一个字节的数据，但是这样会浪费 CPU 的时间，所以经常用到一种称为直接存储器存取（DMA）。只有硬件具有 DMA 控制器时操作系统才能使用 DMA，而大多数系统都有 DMA 控制器。
+        1. 许多总线能够以两种模式操作：每次一字模式和块模式。
+        2. 周期窃取：DMA 控制器请求传送一个字并且得到这个字。如果 CPU 也想使用总线，它必须等待。这一机制称为周期窃取，因为设备控制器偶尔偷偷溜入并且从 CPU 偷走一个临时的总线周期，从而轻微地延迟 CPU。
+        3. 突发模式：在块模式中，DMA 控制器通知设备获得总线，发起一连串的传送，然后释放总线。这一操作形式称为突发模式。它比周期窃取效率更高，因为获得总线占用了时间，并且以一次总线获得的代价能够传送多个字。
+        4. 突发模式的缺点：如果正在进行的是长时间突发传送，有可能将 CPU 和其他设备阻塞相当长的周期。
+        5. 大多数 DMA 控制器使用物理内存地址进行传送。
