--- a/阅读笔记/现代操作系统/第五章：输入输出.md
+++ b/阅读笔记/现代操作系统/第五章：输入输出.md
@@ -2,7 +2,8 @@
 
 ## 第 5 章 输入/输出
 
-1. I/O 硬件远离
+1. I/O 硬件原理
+
     1. I/O 设备：I/O 设备大致可以分为两类：块设备和字符设备。
         1. 块设备存储在固定大小的块中，每个块有自己的地址。块设备的基本特征是每个块都能独立于其他块而读写。硬盘、CD-ROM 和 USB 盘是最常见的块设备。
         2. 块可寻址的设备和其他设备之间并没有严格的界限。磁盘是公认的块可寻址的设备，因为无论磁盘臂当前处于什么位置，它总是能够寻址其他柱面并且等待所需要的磁盘块旋转到磁头下面。
@@ -29,3 +30,23 @@
         3. 突发模式：在块模式中，DMA 控制器通知设备获得总线，发起一连串的传送，然后释放总线。这一操作形式称为突发模式。它比周期窃取效率更高，因为获得总线占用了时间，并且以一次总线获得的代价能够传送多个字。
         4. 突发模式的缺点：如果正在进行的是长时间突发传送，有可能将 CPU 和其他设备阻塞相当长的周期。
         5. 大多数 DMA 控制器使用物理内存地址进行传送。
+        6. 在 DMA 可以开始之前，磁盘首先要将数据读入其内部的缓冲区，原因是：
+            1. 通过进行内部缓冲，磁盘控制器可以在开始传送之前校验和。如果校验和是错误的，那么将发出一个表明错误的信号并且不会进行传送。
+            2. 一旦磁盘传送开始工作，从磁盘读出的数据就是以固定速率到达的，而不论控制器是否准备好接收数据。如果控制器要将数据直接写到内存，则它必须为要传送的每个字取得系统总线的控制权。如果由于其他设备使用总线而导致总线忙（例如在突发模式中），则控制器只能等待。如果总线非常忙，控制器可能需要存储很多字，而且还要完成大量的管理工作。如果块被放入内部缓冲区，则在 DMA 启动前不需要使用总线，控制器的设计就可以简化。
+    5. 中断：当一个 I/O 设备完成交给他的工作时，它就产生一个中断，它是通过分配给它的一条总线信号线上置起信号而产生中断的。该信号被主板上的中断控制芯片检测到，由中断芯片决定做什么。
+        1. 精确中断的 4 个特性：
+            1. PC（程序计数器）保存在一个已知的地方
+            2. PC 所指向的指令之前的所有指令已经完全执行
+            3. PC 所指向的指令之后的所有指令都没有执行
+            4. PC 所指向的指令的执行状态是已知的
+        2. 不精确中断：不满足上面这些要求的中断
+
+2. I/O 软件原理
+    1. I/O 软件的目标
+        1. 设备独立性：应该能够编写出这样的程序，它可以访问任意 I/O 设备而无需事先指定设备。
+        2. 与设备独立性密切相关的是统一命名这一目标，一个文件或一个设备的名字应该是一个简单的字符串或一个整数，它不应依赖于设备。
+        3. I/O 软件的另一个重要问题是错误处理。一般来说，错误应该尽可能地在接近硬件的层面得到处理。当控制器发现了一个读错误时，如果它能够处理那就应该自己纠正这一错误，如果控制器处理不了，那么设备驱动程序应当予以处理。
+        4. 同步与异步传输：大多数物理 I/O 是异步的，CPU 启动传输后便转去做其他工作，直到中断发生。如果 I/O 是阻塞的，那么在 read 系统调用之后，程序将被挂起，直到缓冲区中的数据准备好。
+        5. 缓冲：数据离开一个设备之后通常并不能直接存放到其最终的目的地。数据需要预先放到输出缓冲区之中，从而消除缓冲区填满速率和缓冲区清空速率之间的相互影响，一避免缓冲区欠载。
+        6. 共享设备和独占设备问题：独占设备的引入也带来了各种各样的问题，如死锁。操作系统必须能够处理共享设备和独占设备以避免问题发生。
+    2. 程序控制 I/O
