--- a/阅读笔记/现代操作系统/第五章：输入输出.md
+++ b/阅读笔记/现代操作系统/第五章：输入输出.md
@@ -42,6 +42,7 @@
         2. 不精确中断：不满足上面这些要求的中断
 
 2. I/O 软件原理
+
     1. I/O 软件的目标
         1. 设备独立性：应该能够编写出这样的程序，它可以访问任意 I/O 设备而无需事先指定设备。
         2. 与设备独立性密切相关的是统一命名这一目标，一个文件或一个设备的名字应该是一个简单的字符串或一个整数，它不应依赖于设备。
@@ -50,3 +51,69 @@
         5. 缓冲：数据离开一个设备之后通常并不能直接存放到其最终的目的地。数据需要预先放到输出缓冲区之中，从而消除缓冲区填满速率和缓冲区清空速率之间的相互影响，一避免缓冲区欠载。
         6. 共享设备和独占设备问题：独占设备的引入也带来了各种各样的问题，如死锁。操作系统必须能够处理共享设备和独占设备以避免问题发生。
     2. 程序控制 I/O
+        1. I/O 可以以三种根本不同的方式实现：
+            1. 程序控制 I/O
+            2. 中断驱动 I/O
+            3. 使用 DMA 的 I/O
+        2. CPU 不断地查询设备以了解它是否就绪准备接收另一个字符。这一行为称为轮询或忙等待
+        3. 程序控制 I/O 的缺点：直到全部 I/O 完成之前要占用 CPU 的全部时间
+    3. 中断驱动 I/O：允许 CPU 在等待设备变为就绪的同时做其他事情的方式就是使用中断。
+    4. 使用 DMA 的 I/O：中断驱动 I/O 的一个明显缺点是中断发生在每个字符上。中断要花费时间，所以这一方法将浪费一定数量的 CPU 时间。这一问题的一种解决方案是使用 DMA。让 DMA 控制器一次给打印机提供一个字符，而不必打扰 CPU。本质上，DMA 是程序控制 I/O，只是由 DMA 控制器而不是主 CPU 做全部工作。这一策略需要特殊的硬件，但是使 CPU 获得自由从而可以在 I/O 期间做其他工作。DMA 重大的成功是将中断的次数从打印每个字符一次减少到打印每个缓冲区一次。
+
+3. I/O 软件层次
+
+    1. I/O 软件通常组织成四个层次：
+        1. 用户级 I/O 软件
+        2. 与设备无关的操作系统软件
+        3. 设备驱动程序
+        4. 中断处理程序
+        5. 硬件
+    2. 中断处理程序：
+        1. 保存没有被中断硬件保存的所有寄存器，包括 PSW
+        2. 为中断服务过程设置上下文，可能包括设置 TLB、MMU 和页表
+        3. 为中断服务过程设置堆栈
+        4. 应答中断控制器，如果不存在集中的中断控制器，则再次开放中断
+        5. 将寄存器从它们被保存过的地方复制到进程表中
+        6. 运行中断服务过程，从发出中断的设备控制器的寄存器中提取信息
+        7. 选择下一次运行哪个进程，如果中断导致某个被阻塞的高优先级进程变为就绪，则可能选择它现在就运行
+        8. 为下一次要运行的进程设置 MMU 上下文，也许还需要设置某个 TLB
+        9. 装入新进程的寄存器，包括其 PSW
+        10. 开始运行新进程
+    3. 设备驱动程序：每个连接到计算机上的 I/O 设备都需要某些设备特定的代码来对其进行控制。这样的代码称为设备驱动程序。
+    4. 块设备（如磁盘）包含多个可以独立寻址的数据块
+    5. 字符设备（例如键盘和打印机）生成或接收字符流
+    6. 驱动程序必须是重入的，这意味着一个正在运行的驱动程序必须预料到在第一次调用完成之前第二次被调用
+    7. 与设备无关的 I/O 软件：
+        1. 设备驱动程序的统一接口
+        2. 缓冲
+        3. 错误报告
+        4. 分配与释放专用设备
+        5. 提供与设备无关的块大小
+
+4. 盘
+
+    1. 盘具有多种多样的类型，最为常用的是磁盘，它们具有读写速度同样块的特点。
+    2. 磁盘被组织成柱面，每一个柱面包含若干磁道，磁道数与垂直堆叠的磁头个数相同。磁道又被分成若干扇区。
+    3. 重叠寻道：控制器是否可以同时控制两个或多个驱动器进行寻道
+    4. 读写磁盘的时间影响因素：
+        1. 寻道时间
+        2. 旋转延迟
+        3. 实际数据传输时间
+    5. 稳定存储器：
+        1. 稳定写：稳定写首先将块写到驱动器上，然后将其读回以校验写的是正确的。如果写的不正确，那么就再次做写和重读操作，直到正常为止。
+        2. 稳定读：稳定读首先从驱动器上读取块，如果这一操作产生错误的 ECC，则再次尝试读操作，一直到 n 次。
+        3. 崩溃恢复：崩溃之后，恢复程序扫描两个磁盘，比较对应的块，如果一对块都是好的并且都是相同的，则什么都不做。如果其中一个有 ECC 错误，那么坏块就用对应的好块来覆盖。
+
+5. 时钟
+    1. 时钟又称为定时器，对于多道程序设计系统的操作是至关重要的。
+    2. 时钟负责维护时间，并且防止一个进程垄断 CPU。
+    3. 时钟软件可以采用设备驱动程序的形式。
+    4. 时钟由三个部件构成：晶体震荡器、计数器和存储寄存器
+    5. 周期性的中断称为时钟滴答
+    6. 时钟软件的任务：
+        1. 维护日时间
+        2. 防止进程超时运行
+        3. 对 CPU 的使用情况记账
+        4. 处理用户进程提出的 alarm 系统调用
+        5. 为系统本身的各个部分提供监视定时器
+        6. 完成概要剖析、监视和统计信息收集
