--- a/阅读笔记/现代操作系统/第六章：死锁.md
+++ b/阅读笔记/现代操作系统/第六章：死锁.md
@@ -37,8 +37,25 @@
 
 5. 鸵鸟算法：假设问题没有发生。数学家认为无论代价有多大，都要彻底防止死锁的发生。工程师们则需要评估严重性，是否有必要彻底防止死锁。
 6. 死锁检测和死锁恢复：使用这种技术时，系统并不试图阻止死锁的产生，而是允许死锁发生，当检测到死锁发生后，采取措施进行恢复。
+
     1. 死锁检测算法：
         1. 寻找一个没有标记的进程 Pi，对于它而言 R 矩阵的第 i 行向量小于或等于 A
         2. 如果找到了这样一个进程，那么将 C 矩阵的第 i 行向量加到 A 中，标记该进程，并转到第一步
         3. 如果没有这样的进程，那么算法终止。算法结束时，所有没有标记过的进程都是死锁进程
     2. 从死锁中恢复
+        1. 利用抢占恢复：在不通知原进程的情况下，将某一资源从一个进程强行取走给另一个进程使用，接着又送回，这种做法是否可行主要取决于该资源本身的特性。
+        2. 利用回滚恢复：如果系统设计人员以及主机操作员了解到死锁有可能发生，他们就可以周期性地对进程进行检查点检查。进程检查点检查就是将进程的状态写入一个文件以备以后重启。该检查点中不仅包括存储映像，还包括了资源状态。一旦检测到死锁，就很容易发现需要哪些资源。为了进行恢复，要从一个较早的检查点上开始，这样拥有所需资源的进程会回滚到一个时间点。
+        3. 通过杀死进程恢复：最直接也是最简单的解决死锁的方法是杀死一个或若干个进程。一种方法是杀掉环中的一个进程，直到打破死循环。另一种方法是选一个环外的进程作为牺牲品以释放该进程的资源。
+
+7. 死锁避免
+
+    1. 资源轨迹图
+    2. 安全状态和不安全状态：在任何时刻，如果死锁没有发生，并且所有进程突然请求对资源的最大需求，也仍然存在某种调度次序能够使得每一个进程运行完毕，则称该状态是安全的。
+    3. 单个资源的银行家算法
+    4. 多个资源的银行家算法
+
+8. 死锁预防
+    1. 破坏互斥条件：如果资源不被一个进程所占用，那么死锁肯定不会产生。
+    2. 破坏占有和等待条件：一种实现方法是规定所有进程在开始执行前请求所需的全部资源。如果所需的全部资源可用，那么就将它们分配给这个进程，如果有一个或多个资源正被使用，那么就不进行分配，进程等待。这个方法的一个直接问题是很多进程直到运行时才知道它需要多少资源。实际上，如果进程能够直到它需要多少资源，就可以使用银行家算法。另一个问题是这个方法的资源利用率不是最高的。
+    3. 破坏不可抢占条件
+    4. 破坏环路等待条件：一种是保证每一个进程在任何时刻只能占用一个资源，如果要请求另外一个资源，它必须先释放第一个资源。另一种方法是将所有资源统一编号，进程请求资源时按照资源编号顺序提出。
