--- a/阅读笔记/现代操作系统/第六章：死锁.md
+++ b/阅读笔记/现代操作系统/第六章：死锁.md
@@ -55,7 +55,16 @@
     4. 多个资源的银行家算法
 
 8. 死锁预防
+
     1. 破坏互斥条件：如果资源不被一个进程所占用，那么死锁肯定不会产生。
     2. 破坏占有和等待条件：一种实现方法是规定所有进程在开始执行前请求所需的全部资源。如果所需的全部资源可用，那么就将它们分配给这个进程，如果有一个或多个资源正被使用，那么就不进行分配，进程等待。这个方法的一个直接问题是很多进程直到运行时才知道它需要多少资源。实际上，如果进程能够直到它需要多少资源，就可以使用银行家算法。另一个问题是这个方法的资源利用率不是最高的。
     3. 破坏不可抢占条件
     4. 破坏环路等待条件：一种是保证每一个进程在任何时刻只能占用一个资源，如果要请求另外一个资源，它必须先释放第一个资源。另一种方法是将所有资源统一编号，进程请求资源时按照资源编号顺序提出。
+
+9. 其他问题
+    1. 两阶段加锁：在第一阶段，进程试图对所有所需的记录进行加锁，一次锁一个记录。如果第一阶段加锁成功，就开始第二阶段，完成更新然后释放锁
+    2. 通信死锁：两个或两个以上进程利用发送消息来通信时发生的死锁。
+    3. 活锁：在某种情形下，轮训可用于临界区或存取资源。采用这一策略的主要原因是，相比所做的工作而言，互斥的时间很短而挂起等待的时间开销很大。没有出现死锁现象，但是从现象上看好像死锁发生了，这就是活锁。
+    4. 饥饿：有可能一些进程永远得不到资源。
+
+
