--- a/阅读笔记/HTTP权威指南/第四章：连接管理.md
+++ b/阅读笔记/HTTP权威指南/第四章：连接管理.md
@@ -1,3 +1,32 @@
 # HTTP 权威指南
 
 ## 第 4 章 连接管理
+
+1. TCP 连接：世界上几乎所有的 HTTP 通信都是由 TCP/IP 承载的，TCP/IP 是全球计算机及网络设备都在使用的一种常见的分组交换网络分层协议集。
+
+    1. TCP 的可靠数据管道：TCP 为 HTTP 提供了一条可靠的比特传输管道。从 TCP 连接一端填入的字节会从另一端以原有的顺序、正确地传送出来。
+    2. TCP 是分段的、由 IP 分组传送：TCP 的数据是通过名为 IP 分组（或 IP 数据报）的小数据块来发送。
+    3. HTTPS 是在 HTTP 和 TCP 之间插入了一个（称为 TLS 或 SSL 的）密码加密层。
+    4. HTTP 要传送一条报文时，会以流的形式将报文数据的内容通过一条打开的 TCP 连接按序传输。TCP 收到数据流之后，会将数据流砍称被称作段的小数据块，并将段封装在 IP 分组中，通过因特网进行传输。
+    5. 每个 TCP 段都是由 IP 分组承载，从一个 IP 地址发送到另一个 IP 地址的。每个 IP 分组中都包括：
+        1. 一个 IP 分组首部（通常为 20 字节）：包含了源和目的 IP 地址、长度和其他一些标记。
+        2. 一个 TCP 段首部（通常为 20 字节）：包含了 TCP 端口号、TCP 控制标记，以及用于数据排序和完整性检查的一些数字值。
+        3. 一个 TCP 数据块（0 个或多个字节）
+    6. 在任意时刻计算机都可以有几条 TCP 连接处于打开状态。TCP 是通过端口号来保持所有这些连接持续不断地运行。
+    7. TCP 连接是通过 4 个值来识别的：`<源IP地址、源端口号、目的IP地址、目的端口号>`，这 4 个值一起唯一地定义了一条连接
+    8. 对 TCP 连接进行编程所需的常见套接字接口函数：
+        1. `s = socket(<parameters>)`：创建一个新的、未命名、未关联的套接字
+        2. `bind(s,<local IP:port>)`：向套接字赋一个本地端口号和接口
+        3. `connect(s, <remote IP:port>)`：创建一条连接本地套接字与远程主机及端口的连接
+        4. `listen(s,...)`：标识一个本地套接字，使其可以合法接受连接
+        5. `s2 = accept(s)`：等待某人建立一条到本地端口的连接
+        6. `n = read(s, buffer, n)`：尝试从套接字向缓冲区读取 n 个字节
+        7. `n = write(s, buffer, n)`：尝试从缓冲区中向套接字写入 n 个字节
+        8. `close(s)`：完全关闭 TCP 连接
+        9. `shutdown(s,<side>)`：只关闭 TCP 连接的输入或输出端
+        10. `getsockopt(s,...)`：读取某个内部套接字配置选项的值
+        11. `setsockopt(s,...)`：修改某个内部套接字配置选项的值
+    9. 套接字 API 允许用户创建 TCP 的端点数据结构，将这些端点与远程服务器的 TCP 端点进行连接，并对数据流进行读写。
+    10. TCP API 隐藏了所有底层网络协议的握手细节，以及 TCP 数据流与 IP 分组之间的分段和重装细节。
+
+2. 对 TCP 性能的考虑
